--- a/gemin-test/css/middle-area-up.css
+++ b/gemin-test/css/middle-area-up.css
@@ -30,6 +30,9 @@
     margin-top: 4px;
     margin-bottom: 4px;
     overflow-wrap: break-word;
+    margin-top: 15.2px;    /* 原 margin-block-start */
+    margin-bottom: 15.2px; /* 原 margin-block-end */
+    /* 其他样式保持不变 */
 }
 
 /* 用户消息样式 (右对齐，绿色背景) */
